[tool.poetry]
name = "gpt4-tokens"
version = "0.1.0"
description = ""
authors = ["Koen van Gilst <koen@koenvangilst.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
